<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        android:title="@string/Search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/fav"
        android:title="@string/Favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/calendar"
        android:title="@string/Calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/Profile"
        app:showAsAction="ifRoom" />
</menu>