<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.view.ProfileFragment">
    <TextView

        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingTop="12dp"
        android:text="@string/hello_chef"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:shapeAppearanceOverlay="@style/roundedphoto"
        android:src="@drawable/profile"
        tools:srcCompat="@tools:sample/avatars"/>
    <TextView
        android:id="@+id/favorite_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/favorite_meals"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/textview_border"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/orange_fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/calendar_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/calendar_meals"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/textview_border"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/orange_cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_meals"
        android:layout_marginTop="20dp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Btn"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/login_skip_btn_shape"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_meals"/>


</androidx.constraintlayout.widget.ConstraintLayout>