<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf ="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/signin_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signin"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_emailTextLayeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Email"
                android:inputType="text"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/signin_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"
                    android:drawableStart="@drawable/at_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Password"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/login_emailTextLayeout"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/orange"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_shape"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_passwordLayout" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/LogIn_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/login_skip_btn_shape"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_passwordLayout" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/Or"
                android:textColor="@color/orange"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LogIn_Btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_login_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/google_login_btn_selector"
                android:drawableStart="@drawable/google_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/continue_with_google"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or_text" />

            <FrameLayout
                android:id="@+id/facebook_login_Layeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/google_login_Btn">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/facebook_login_Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/google_login_btn_selector"
                    android:drawableStart="@drawable/facebook_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/continue_with_faebook"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </FrameLayout>
            <TextView
                android:id="@+id/signUp_Navigator_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/not_yet_registered_sign_up"
                android:textColor="@color/orange"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/facebook_login_Layeout" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/login_photo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="-40dp"
        android:layout_marginBottom="180dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image4"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/login_photo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/login_photo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="130dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image8"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image9"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/login_photo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:shapeAppearanceOverlay="@style/roundedphoto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logIn_Skip_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.5"
        android:background="@drawable/login_skip_btn_shape"
        android:text="@string/Skip"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>