<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".home.view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"
            android:src="@drawable/pan"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="9dp"
            android:gravity="center"
            android:text="@string/have_you_decided_on_today_s_meal"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"

            android:src="@drawable/pan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_border_shape"
            android:padding="4dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/random_meal_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/borderedPhoto"
                tools:src="@drawable/onboardimage1"
                android:contentDescription="@string/randommeal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/transparent_rectangle_shape"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/random_meal_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pork Cassoulet"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/random_meal_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="A slow-cooked French dish with beans and pork."
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lazy_meals_for_a_cozy_day"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/orange"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/random_meals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_meal_card"
        android:scrollbars="horizontal"/>

</LinearLayout>

